2006-05-24  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/GuiUtil.cs (RenderGlyph): add a hack to
	antialias the fonts.  of course this is yet another hack on top of
	the already hackish nature of font rendering.

2006-05-24  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/GameScreen.cs: track the Unit currently under
	the cursor, and when we click on it, spew a little info about it.

2006-05-24  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/Game.cs (DisplayTitle): use the FirstPainted
	event to determine when the title screen is shown, rather than the
	Ready event (which is emitted when it finishes loading.)
	(TitleScreenReady): pass in both stardatMpq and broodatMpq to the
	GlobalResources ctor so it can load both sets of resources.

	* SCSharp/SCSharp.UI/Builtins.cs: add mapdata.dat and mapdata.tbl.

	* SCSharp/SCSharp.UI/GlobalResources.cs: rework things in this
	class to handle loading both the broodwar and starcraft assets.
	Use Game.PlayingBroodwar to implicitly switch between the
	different versions when using just the resource name, but allow
	explicit access to each version when necessary.

	* SCSharp/SCSharp.Mpq/Mpq.cs (GetTypeFromResourcePath): handle
	mapdata.dat.

	* SCSharp/SCSharp.Mpq/MapDataDat.cs: new class, just a set of
	indices into mapdata.tbl.

	* SCSharp/SCSharp.UI/GameModeDialog.cs (LoadResources): explicitly
	use broodat's gluAll.tbl to get the dialog title.  This keeps us
	from crashing if we select "Original", then exit back to the main
	menu and open this dialog again.

	* SCSharp/SCSharp.UI/Painter.cs (Tick): rename "Animate" to this.
	(DrawText):  remove unused, empty function.

	* SCSharp/SCSharp.UI/RaceSelectionScreen.cs
	(BroodwarCampaigns_MapDataStart): stop hardcoding the strings
	here.  instead, hardcode the indices into the mapdata.dat file.
	(StarcraftCampaigns_MapDataStart): same.
	(LoadResources): in the campaign element activate delegates, just
	call SelectCampaign.